Address CodeRabbit review: precision fixes across the FAQ pages
All 8 major findings and 48 of the 50 minor ones. Grouped by what was
actually wrong:

Concurrency / JMM
- CompletableFuture: only supplyAsync/runAsync/*Async use the common
  pool; non-Async stages run on the completing or calling thread.
- LinkedBlockingQueue is bounded only with an explicit capacity.
- Lock ordering needs a stable unique rank, not hashCode (collisions
  leave two locks unordered).
- A Java data race is not "undefined behaviour" - the JMM defines the
  permitted outcomes; it is unordered, and the hoisted-read hazard is
  the point.

JVM
- OOM "unable to create new native thread" is an OS/native-memory
  failure, not a deep stack.
- Not every collector stops the world the same way: label the
  generational diagram as classic collectors, and note ZGC/Shenandoah
  are mostly concurrent, Epsilon never collects.
- Reference strengths are eligibility, not a clearing schedule.
- Class init: compile-time constants and non-initialising reflective
  calls do not trigger <clinit>.
- G1 region size is ergonomic (1-32MB), CDS != AOT native image,
  -XX:+UseZGC spelled in full.

Kafka
- acks=all waits for the whole current ISR; min.insync.replicas is the
  floor below which writes are rejected.
- High watermark is exclusive; default partitioner is murmur2 over the
  serialized key and re-maps when partitions are added; null keys are
  sticky, not round-robin.

Java language pages
- Boxed 128 identity is unspecified, not guaranteed distinct.
- serialVersionUID is computed by the serialization runtime and only
  preserves compatible changes.
- readObject runs the first non-serializable superclass constructor.
- throws is part of the declaration, not the signature; finally is also
  skipped by Runtime.halt; cause preservation is new X("ctx", e);
  submit() hides the exception in the Future while execute() reaches the
  UncaughtExceptionHandler.
- Collectors.toList() guarantees nothing about mutability